ipc/ipdl/test/ipdl/ok/Pshmem.ipdl
union Foo {
    int;
    Shmem;
};

[ChildProc=any]
sync protocol Pshmem {
parent:
    async Msg(Shmem s, Foo f);
    sync SyncMsg(Shmem s, Foo f)
        returns (Shmem t, Foo g);
};
