ipc/ipdl/test/ipdl/error/PExtendedAttrUnexpectedValue.ipdl
//error: unexpected value for valueless attribute `RefCounted'

[RefCounted=invalid] async protocol PExtendedAttrUnexpectedValue {
parent:
    async Msg();
};
